# cqi_das

./: LICENSE  README.md  channel_picker.py  channel_quality_manual_picker.py  channel_selector.py  common.py  create_datasets.py  feature_engineering.py  graphics.py  main.ipynb  models.py  pyproject.toml  utils.py
cqi_das/: __init__.py  channel_selector.py  common.py  feature_engineering.py  interactive_plot.py  models.py  predict_quality.py  signal_features.py  utils.py
cqi_das/trained_models/: calibrated_xgb.pkl  robust_scaler.pkl
data/: README.md
feat_eng/: feature_engineering.py
internal_docs/: model_selection.ipynb  paper_figures.ipynb
results/5 november results/: rfe_dt.pkl
tools/: create_datasets.py  run_example.py  train_model.py
